# tudatExampleApplications

./: .gitignore  README.md
EarthOrbitingSatelliteExample/: CMakeLists.txt  asterixAndObelixPlottingScript.m  body.h  cartesianStateNumericalPropagator.cpp  cartesianStateNumericalPropagator.h  earthOrbitingSatelliteExample.cpp  galileoConstellationPlottingScript.m  galileoConstellationSimulation.cpp  numericalPropagator.cpp  numericalPropagator.h  propagator.h  propagatorDataContainer.h  seriesPropagator.cpp  seriesPropagator.h  stateAssembly.cpp  stateAssembly.h  stateDerivativeModel.cpp  stateDerivativeModel.h  unitTestNumericalPropagator.cpp  void.cpp
EarthOrbitingSatelliteExample/CMake/: FindTudat.cmake  FindTudatCore.cmake
EarthOrbitingSatelliteExample/MatlabScripts/: asterixAndObelixPlottingScript.m  galileoConstellationPlottingScript.m
TemplateApplication/: CMakeLists.txt  UserSettings.txt.example  helloWorld.cpp
TemplateApplication/CMakeModules/: FindEigen3.cmake  FindTudat.cmake  FindTudatCore.cmake
libraryExamples/: NOTICE
libraryExamples/GSL/: CMakeLists.txt  Example_GSL.cpp
libraryExamples/GSL/CMakeModules/: FindBoost.cmake  FindEigen3.cmake  FindGSL.cmake
libraryExamples/PaGMOEx/: CMakeLists.old.txt  CMakeLists.txt  SimsFlanaganTrajectoryExample.cpp  cec2013OptimizerComparison.cpp  earthMarsTransferExample.cpp  himmelblauOptimization.cpp  hodographicShapingFullOptimisationExample.cpp  hodographicShapingTrajectoryExample.cpp  lowThrustTrajectoryExample.cpp  main.cpp  mgaTransferExample.cpp  multiObjectiveEarthMarsTransferExample.cpp  propagationTargetingExample.cpp  simsFlanaganTrajectoryExample.cpp  thesisOptimization.cpp
libraryExamples/PaGMOEx/Analysis/: lowThrustTrajectoryDesign.m  multiObjectiveComparison.m  optimaAnalysis.m  optimizedHodographicShaping.m  porkchopPlot.m  propagationTargeting.m
libraryExamples/PaGMOEx/AstroToolbox/: Astro_Functions.h  CMakeLists.txt  Lambert.cpp  Lambert.h  mga.cpp  propagateKEP.h
libraryExamples/PaGMOEx/CMakeModules/: FindNLOPT.cmake  FindPaGMO.cmake  FindTudat.cmake  compiler.cmake
libraryExamples/PaGMOEx/Problems/: CMakeLists.txt  applicationOutput.h  earthMarsTransfer.cpp  earthMarsTransfer.h  earthMarsTransfer.hpp  getAlgorithm.h  getRecommendedBaseFunctionsHodographicShaping.h  lambertTargeter.cpp  lambertTargeter.h  lowThrustTrajectory.h  multipleGravityAssist.cpp  multipleGravityAssist.h  propagationTargeting.cpp  propagationTargeting.h  saveOptimizationResults.h
libraryExamples/Pagmo2/: CMakeLists.old.txt  CMakeLists.txt  pagmoTudatExample.cpp  pagmo_simple_problem.cpp
libraryExamples/Pagmo2/CMakeModules/: FindPaGMO.cmake  FindPaGMO2.cmake
libraryExamples/Pagmo2/HimmelblausFunction/: CMakeLists (copy).txt  CMakeLists.txt  himmelblaus.hpp  main.cpp  multiObjectiveOptimizerComparison.cpp  optimizerComparison.cpp  optimizerComparison.m
libraryExamples/Pagmo2/HimmelblausFunction/CMakeModules/: FindTudat.cmake  compiler.cmake
libraryExamples/Pagmo2/HimmelblausFunction/applications/: application_PagmoHimmelblausExample
libraryExamples/Pagmo2/Problems/: CMakeLists.txt  earthMarsTransfer.cpp  earthMarsTransfer.h  easy_problem.hpp
libraryExamples/Pagmo2/TudatExamples/: CMakeLists.txt  earthMarsTransferExample.cpp  mgaTransferExample.cpp  multiObjectiveEarthMarsTransferExample.cpp  pop.bak  propagationTargetingExample.cpp
libraryExamples/Pagmo2/TudatExamples/AstroToolbox/: mga.cpp
libraryExamples/Pagmo2/TudatExamples/Problems/: CMakeLists.txt  earthMarsTransfer.cpp  earthMarsTransfer.h  multipleGravityAssist.cpp  multipleGravityAssist.h  propagationTargeting.cpp  propagationTargeting.h
libraryExamples/SpiceAndJSON/: CMakeLists.txt  config.json  main.cpp
libraryExamples/SpiceAndJSON/CMakeModules/: FindJSONCPP.cmake  compiler.cmake
satellitePropagatorExamples/SatellitePropagatorExamples/: CMakeLists.txt  MikhailData.txt  RadioAstronODsimulationArcs2.cpp  apolloCapsuleEntry.cpp  apolloCapsuleEntry.json  apolloCapsuleEntryJSON.cpp  applicationOutput.h  asterixAndObelixPropagator.cpp  body.h  earthOrbiterBasicStateEstimation.cpp  earthOrbiterStateEstimation.cpp  earthOrbitingSatelliteExample.cpp  filterExample.cpp  fullPropagationInterplanetaryTrajectory.cpp  fullPropagationSpacecraftCR3BP.cpp  galileoConstellationSimulator.cpp  innerLongSolarSystemPropagation.cpp  innerSolarSystemPropagation.cpp  interplanetaryTrajectoryDesign.cpp  jsonSimulation.cpp  lifetimeMaximisation.cpp  multiThreadingSandbox.cpp  nonconstantThrust.txt  propagatorTypesComparison.cpp  satellitePropagatorExampleVisualizations.m  satelliteRendezVousExample.cpp  shapeBasedTrajectoryDesign.cpp  singlePerturbedSatellitePropagator.cpp  singlePerturbedSatellitePropagator.json  singlePerturbedSatellitePropagatorJSON.cpp  singlePerturbedSatelliteVariationalEquationsPropagator.cpp  singleSatellitePropagator.cpp  spacexTeslaTrajectory.cpp  tabulatedAtmosphereUsage.cpp  thrustAccelerationExample.cpp  thrustAccelerationFromFileExample.cpp  thrustAlongVelocityVectorExample.cpp  tudat.cpp  usmTest.cpp  variationalEquationsPropagatorExample.cpp
satellitePropagatorExamples/SatellitePropagatorExamples/CMakeModules/: FindBoost.cmake  FindEigen3.cmake  FindGSL.cmake  FindTudatCore.cmake  compiler.cmake
satellitePropagatorExamples/SatellitePropagatorExamples/MatlabScripts/: asterixAndObelixPlottingScript.m  earthOrbiterBasicStateEstimationVisualization.m  earthOrbiterStateEstimationVisualization.m  filterExample.m  fullPropagationCR3BP.m  fullPropagationPatchedConicsTrajectory.m  galileoConstellationPlottingScript.m  interplanetaryTrajectory.asv  interplanetaryTrajectory.m  propagatorTypesComparison.m  satellitePropagatorExampleVisualizations.m  satelliteRendezVousPlottingScript.m  shapeBasedTrajectories.m  variationalEquationPropagationVisualization.m
templateApplication/TemplateApplication/: CMakeLists.txt  UserSettings.txt.example  helloWorld.cpp  unittesttest.cpp
templateApplication/TemplateApplication/CMakeModules/: FindBoost.cmake  FindEigen3.cmake  FindTudat.cmake  FindTudatCore.cmake  compiler.cmake
(+23 files in other folders)
